<resources>
    <string name="app_name">FreeWorkout V0.18</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Passwort</string>
    <string name="prompt_vorname">first name</string>
    <string name="prompt_nachname">last name</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="error_sign_in">Fill in email and password please!</string>
    <string name="forgot_password">Forgot password</string>
    <string name="send_password">We have sent you a new password by email.</string>
    <string name="menu_name">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_history">History</string>
    <string name="menu_matrix">Matrix</string>
    <string name="menu_matrix2018">Matrix 2018</string>
    <string name="menu_workouts">Workouts</string>
    <string name="menu_workouts_2018">Workouts 2018</string>
    <string name="menu_exercises">Exercises</string>
    <string name="menu_logout">Sign out</string>
    <string name="dialog_title_login">Log in or create new account</string>
    <string name="dialog_skills">Skills:</string>
    <string name="dialog_type">Focus:</string>
    <string name="dialog_days">Days/Week:</string>
    <string name="dialog_hardness">Power:</string>
    <string name="dialog_button_positive">Close</string>
    <string name="dialog_button_calc">Create new</string>
    <string name="dialog_button_wo_display">To workout</string>
    <string name="dialog_button_wo_start">Workout start</string>
    <string name="dialog_button_wo_continue">Continue</string>
    <string name="dialog_button_wo_add">+</string>
    <string name="dialog_button_wo_back">Go back</string>
    <string name="dialog_button_sign_in">Log in</string>
    <string name="dialog_button_register">New sign in</string>
    <string name="dialog_button_start">Start</string>
    <string name="text_wo_cancel">Are you sure you want to cancel your workout?</string>
    <string name="text_wo_add">Du möchtest dich steigern und das Workout noch ein Mal hinzufügen? Tu dies nur, wenn Du sicher bist, dass du es ohne Bedenken schaffst!</string>
    <string name="text_wo_finish">Hast du das Workout versehentlich beendet? Dann drücke auf ZURÜCK. Du möchtest auf 2x erhöhen? Dann drücke auf +. Drücke zum Beenden deines Workouts auf SPEICHERN.</string>
    <string name="button_new_week">Calculate new week</string>
    <string name="button_new_prefs">Settings</string>
    <string name="text_rounds">Rounds:</string>
    <string name="text_day_1">Day 1</string>
    <string name="text_day_2">Day 2</string>
    <string name="text_day_3">Day 3</string>
    <string name="text_day_4">Day 4</string>
    <string name="text_day_5">Day 5</string>
    <string name="text_day_6">Day 6</string>
    <string name="text_day_7">Day 7</string>
    <string name="text_round_0">Round 1</string>
    <string name="text_round_1">Round 2</string>
    <string name="text_round_2">Round 3</string>
    <string name="text_round_3">Round 4</string>
    <string name="text_round_4">Round 5</string>
    <string name="text_round_5">Round 6</string>
    <string name="text_round_6">Round 7</string>
    <string name="text_round_7">Round 8</string>
    <string name="text_round_8">Round 9</string>
    <string name="text_round_9">Round 10</string>
    <string name="text_round_10">Round 11</string>
    <string name="text_round_11">Round 12</string>
    <string name="text_round_12">Round 13</string>
    <string name="text_round_13">Round 14</string>
    <string name="text_round_14">Round 15</string>
    <string name="text_round_15">Round 16</string>
    <string name="text_round_16">Round 17</string>
    <string name="text_round_17">Round 18</string>
    <string name="text_round_18">Round 19</string>
    <string name="text_round_19">Round 20</string>
    <string name="text_round_20">Round 21</string>
    <string name="text_round_21">Round 22</string>
    <string name="text_round_22">Round 23</string>
    <string name="text_round_23">Round 24</string>
    <string name="text_round_24">Round 25</string>
    <string name="text_round_25">Round 26</string>
    <string name="text_round_26">Round 27</string>
    <string name="text_round_27">Round 28</string>
    <string name="text_round_28">Round 29</string>
    <string name="text_round_29">Round 30</string>

    <string name="text_repeats">Repetions:</string>
    <string name="radio_Endurance">Cardio</string>
    <string name="radio_Standard">Cardio/Strength</string>
    <string name="radio_Strength">Strength</string>
    <string name="radio_man">male</string>
    <string name="radio_woman">female</string>
    <string name="speak5">Five</string>
    <string name="speak4">Four</string>
    <string name="speak3">Three</string>
    <string name="speak2">Two</string>
    <string name="speak1">One</string>
    <string name="speak0">go</string>
    <string name="round">Round</string>
    <string name="cab_delete">delete entrys</string>
    <string name="cab_checked_string">selected</string>
    <string name="cab_change">Change entry</string>
    <string name="points">%1$d</string>
    <string name="text_points">Points:</string>
    <string-array name="bodyListType">
        <item>Full Body</item>
        <item>Lower</item>
        <item>Lower, Core</item>
        <item>Core, Lower</item>
        <item>Core</item>
        <item>Core, Upper</item>
        <item>Upper, Core</item>
        <item>Upper</item>
    </string-array>
    <string-array name="spinnerQuantityListType">
        <item>10x</item>
        <item>20x</item>
        <item>30x</item>
        <item>50x</item>
        <item>100x</item>
        <item>200x</item>
        <item>250x</item>
        <item>500x</item>
        <item>750x</item>
        <item>1000x</item>
        <item>1500x</item>
        <item>2000x</item>
    </string-array>
    <string-array name="spinnerQuantityListTypeMeter">
        <item>2x 10m</item>
        <item>2x 20m</item>
        <item>2x 40m</item>
        <item>100m</item>
        <item>200m</item>
        <item>400m</item>
    </string-array>
    <string-array name="spinnerQuantityListTypeRunMeter">
        <item>800m</item>
        <item>1000m</item>
        <item>1500m</item>
        <item>2000m</item>
        <item>3000m</item>
        <item>4000m</item>
        <item>5000m</item>
        <item>8000m</item>
        <item>10000m</item>
        <item>15000m</item>
        <item>20000m</item>
        <item>21097m</item>
        <item>30000m</item>
        <item>42195m</item>
    </string-array>
    <string name="dialog_title_profile">Profile</string>
    <string name="dialog_title_details">Details</string>
    <string name="profile_firstname">first given name:</string>
    <string name="profile_name">family name:</string>
    <string name="profile_username">user name</string>
    <string name="profile_email">email:</string>
    <string name="profile_password">password:</string>
    <string name="profile_birthday">birthday:</string>
    <string name="profile_gender">gender:</string>
    <string name="profile_gender_male">male</string>
    <string name="profile_gender_female">female</string>
    <string name="dialog_button_cancel">CANCEL</string>
    <string name="dialog_button_save">SAVE</string>
    <string name="text_time_output">on %1$s at %2$s</string>

</resources>
