<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_name"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <!--<item
        android:id="@+id/action_profile"
        android:title="@string/menu_profile"
        android:orderInCategory="100"
        app:showAsAction="never" />-->
    <item
        android:id="@+id/action_history"
        android:title="@string/menu_history"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_matrix"
        android:title="@string/menu_matrix"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_workouts"
        android:title="@string/menu_workouts"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_workouts_2018"
        android:title="@string/menu_workouts_2018"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exercises"
        android:title="@string/menu_exercises"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:title="@string/menu_logout"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>