<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10sp">


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <AutoCompleteTextView
            android:id="@+id/vorname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_vorname"
            android:inputType="textAutoComplete"
            android:maxLines="1"/>


        <AutoCompleteTextView
            android:id="@+id/nachname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_nachname"
            android:inputType="textAutoComplete"
            android:maxLines="1" />
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <RadioGroup
                android:id="@+id/radioType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5sp">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_man"
                    android:onClick="onRadioButtonClicked" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_woman"
                    android:onClick="onRadioButtonClicked" />

            </RadioGroup>
        </LinearLayout>

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1" />

    </LinearLayout>

</ScrollView>