<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10sp">


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_name"
            android:gravity="left"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:textColor="#000000"
            android:textSize="@dimen/profile_text_size"/>
        <EditText
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLines="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_firstname"
            android:gravity="left"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:textColor="#000000"
            android:textSize="@dimen/profile_text_size"/>
        <EditText
            android:id="@+id/profile_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLines="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_username"
            android:gravity="left"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:textColor="#000000"
            android:textSize="@dimen/profile_text_size"/>
        <EditText
            android:id="@+id/profile_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_email"
            android:gravity="left"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:textColor="#000000"
            android:textSize="@dimen/profile_text_size"/>

        <AutoCompleteTextView
            android:id="@+id/profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_password"
            android:gravity="left"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:textColor="#000000"
            android:textSize="@dimen/profile_text_size"/>
        <EditText
            android:id="@+id/profile_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_birthday"
            android:gravity="left"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:textColor="#000000"
            android:textSize="@dimen/profile_text_size"/>
        <EditText
            android:id="@+id/profile_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:maxLines="1" />


    </LinearLayout>

</ScrollView>